cuda-workshop/qwiklab/cfn.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "CloudFormation",

  "Parameters": {
    "InstanceType": {
      "Description": "EC2 instance type",
      "Type" : "String",
      "Default" : "p2.xlarge",
      "NoEcho": "true",
      "AllowedValues" : [ "p2.xlarge"],
      "ConstraintDescription" : "must be a valid EC2 instance type."
    },
    "KeyName":{
      "Description":"Name of an existing EC2 KeyPair to enable access to qwiklabInstance",
      "Default":"generic-qwiklab",
      "Type":"String"
    },
    "AdministratorUser": {
      "Description": "Username the student logs into",
      "Default": "ubuntu",
      "Type": "String"
    }
  },

  "Resources": {
    "qwiklabInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId" : "TODO SUPPLY AMI",
        "InstanceType": { "Ref": "InstanceType" },
        "SecurityGroups": [ { "Ref": "qwiklabInstanceSecurityGroup" } ],
        "KeyName": { "Ref": "KeyName" },
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": ["", [
              "#!/bin/bash -x\n",
              "/bin/echo userdata_end > /tmp/userdata_end\n"
            ]]
          }
        }
      }
    },

    "qwiklabInstanceSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable ports",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 4040,
            "ToPort": 4040,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8787,
            "ToPort": 8787,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8888,
            "ToPort": 8888,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 12345,
            "ToPort": 12345,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 54321,
            "ToPort": 54321,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    }
  },

  "Outputs": {
    "Jupyter": {
      "Description": "Jupyter URL",
      "Value": { "Fn::Join": [ "", ["http://", { "Fn::GetAtt": ["qwiklabInstance", "PublicIp"] }, ":8888" ]]}
    }
  }
}
